added a croissant Page

--- a/src/contact.html
+++ b/src/contact.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <h1>🥐 Contact us</h1>
-
-    To contact croissant.com, please email us at
-    <a href="mailto:chimenemakah58@gmail.com" title="contact us by email"
-      >chimenemakah58@gmail.com</a
-    >
+    <p>
+      To contact croissant.com, please email us at
+      <a href="mailto:chimenemakah58@gmail.com" title="contact us by email"
+        >chimenemakah58@gmail.com</a
+      >
+      for more info
+    </p>
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/src/images/croissant .jpg" title="Croissant photo"> Photo</a>
