--- a/src/photo.html
+++ b/src/photo.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissant</title>
+    <title>Yummy Croissant</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
-    <p>
-      Croissants are small, sweet bread rolls in the shape of a crescent that
-      are eaten for breakfast.
-    </p>
+    <h1>🥐 A picture of a croissant</h1>
+    <img
+      src="/src/images/croissant .jpg"
+      alt="Homemade croissant"
+      class="croissant-photo"
+    />
     <footer>
       <a href="/index.html" title="Home"> Homepage</a>
-      <a href="/src/photo.html" title="Croissant photo"> Photo</a>
+      <a href="/src/images/croissant .jpg" title="Croissant photo"> Photo</a>
       <a href="/src/contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
