added a source code

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
       <a href="/src/photo.html" title="Croissant photo"> Photo</a>
       <a href="/src/contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
+    <span>
+      Coded by
+      <a href="https://github.com/chimenemakah/croissant-challenge"
+        >Chimenem Esther Akah
+      </a>
+    </span>
   </body>
 </html>
