--- a/src/photo.html
+++ b/src/photo.html
@@ -16,7 +16,7 @@
     <img
       src="/src/images/croissant .jpg"
       alt="Homemade croissant"
-      class="croissant-photo"
+      class="croissant"
     />
     <footer>
       <a href="/index.html" title="Home"> Homepage</a>
