--- a/src/photo.html
+++ b/src/photo.html
@@ -8,8 +8,12 @@
       content="width=
   , initial-scale=1.0"
     />
+    <meta
+      name="description"
+      content="Enjoy a beautiful picture of a homemade yummy croissant"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Yummy Croissant</title>
+    <title>An example of the Yummiest Croissant - Croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
