--- a/src/contact.html
+++ b/src/contact.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact croissant.com to learn more about our homemade croissants"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Contact Page</title>
+    <title>Contact us - Croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
